[package]
name = "prover_batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
glob.workspace = true
itertools.workspace = true
log.workspace = true
log4rs.workspace = true
rand.workspace = true

halo2_proofs.workspace = true
prover.workspace = true
zkevm-circuits.workspace = true

[dev-dependencies]
serde.workspace = true
serde_derive.workspace = true
